wip: use nextjs app router for api
